Avoid multiple vertical scrollbars when pegeFind UI is active,

--- a/_scss/_base.scss
+++ b/_scss/_base.scss
@@ -20,6 +20,10 @@ body {
     overflow-x: hidden;
 }
 
+body:has(div.pagefind-ui__drawer:not(.pagefind-ui__hidden)) {
+    overflow-y: hidden !important;
+}
+
 a {
     color: $primary-links;
     text-decoration: none;
